EXTRA_DIST = cocoa_util.m  DeSmuME.cbp  globals.h  main.m  main_window.h  main_window.m  nds_control.h  nds_control.m  preferences.m \
	about.m DeSmuME.icns English.strings Info.plist InfoPlist.strings input.h input.m \
	Japanese.strings makeapp.sh PkgInfo preferences.h rom_info.h rom_info.m screenshot.h screenshot.m \
	sndOSX.h sndOSX.mm video_output_view.h video_output_view.m \
	DeSmuME.xcodeproj/project.pbxproj \
	English.nib/classes.nib English.nib/info.nib English.nib/keyedobjects.nib \
	Japanese.nib/classes.nib Japanese.nib/info.nib Japanese.nib/keyedobjects.nib
