EXTRA_DIST = cocoa_util.m  DeSmuME.cbp  globals.h  main.m  main_window.h  main_window.m  nds_control.h  nds_control.mm  preferences.m \
	about.m DeSmuME.icns Info.plist InfoPlist.strings input.h input.m \
	makeapp.sh PkgInfo preferences.h screenshot.h screenshot.m \
	screen_state.h screen_state.m sndOSX.h sndOSX.mm video_output_view.h video_output_view.m \
	DeSmuME.xcodeproj/project.pbxproj Rakefile \
	English.strings English.nib/classes.nib English.nib/info.nib English.nib/keyedobjects.nib \
	French.strings French.nib/classes.nib French.nib/info.nib French.nib/keyedobjects.nib \
	Japanese.strings Japanese.nib/classes.nib Japanese.nib/info.nib Japanese.nib/keyedobjects.nib
